--- a/gem_gobbler.html
+++ b/gem_gobbler.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
     <title>Gem Gobbler</title>
     <style>
@@ -12,16 +14,24 @@
         }
 
         .gem {
-            width: 50px;
-            height: 50px;
+            width: 5px;
+            height: 5px;
             background-color: red;
             position: absolute;
             cursor: pointer;
         }
+        
+        .center-screen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
 
         #avatar {
-            width: 50px;
-            height: 50px;
+            width: 25px;
+            height: 25px;
             background-color: blue;
             position: absolute;
             top: 0;
@@ -34,7 +44,112 @@
     <div id="game-board">
         <!-- Gems will be dynamically created here -->
     </div>
+    <script>
+        // Declare gameBoard variable
+        let gameBoard;
 
-    <script src="game.js"></script>
+        // Function to create a gem at a random position on the game board
+        function createGem() {
+            const gem = document.createElement("div");
+            gem.className = "gem";
+            // Generate random position
+            const xPos = Math.floor(Math.random() * (gameBoard.clientWidth - gem.clientWidth));
+            const yPos = Math.floor(Math.random() * (gameBoard.clientHeight - gem.clientHeight));
+            gem.style.left = xPos + "px";
+            gem.style.top = yPos + "px";
+            // Increment score on gem click and remove gem
+            gem.addEventListener("click", function() {
+                score++;
+                updateScore();
+                gem.remove();
+            });
+            gameBoard.appendChild(gem);
+        }
+        
+        // Function to update the score on the page
+        function updateScore() {
+            const scoreElement = document.getElementById("score");
+            scoreElement.innerText = "Score: " + score;
+        }
+
+        document.addEventListener("DOMContentLoaded", function() {
+            gameBoard = document.getElementById("game-board");
+            const avatar = document.getElementById("avatar");
+            let score = 0;
+
+            // Function to move the avatar
+            function moveAvatar(direction) {
+                const avatarRect = avatar.getBoundingClientRect();
+                const gameBoardRect = gameBoard.getBoundingClientRect();
+
+                // Calculate new position based on the current position and direction
+                let newLeft = avatarRect.left;
+                let newTop = avatarRect.top;
+                const step = 10;
+
+                if (direction === "left" && avatarRect.left > gameBoardRect.left) {
+                    newLeft -= step;
+                } else if (direction === "right" && avatarRect.right < gameBoardRect.right) {
+                    newLeft += step;
+                } else if (direction === "up" && avatarRect.top > gameBoardRect.top) {
+                    newTop -= step;
+                } else if (direction === "down" && avatarRect.bottom < gameBoardRect.bottom) {
+                    newTop += step;
+                }
+
+                // Move the avatar to the new position
+                avatar.style.left = newLeft + "px";
+                avatar.style.top = newTop + "px";
+
+                // Check for collision with gems
+                const gems = document.getElementsByClassName("gem");
+                for (let i = 0; i < gems.length; i++) {
+                    const gem = gems[i];
+                    const gemRect = gem.getBoundingClientRect();
+
+                    if (isColliding(avatarRect, gemRect)) {
+                        score++;
+                        updateScore();
+                        gem.remove();
+                    }
+                }
+            }
+
+            // Function to check collision between two rectangles
+            function isColliding(rect1, rect2) {
+                return (
+                    rect1.left < rect2.right &&
+                    rect1.right > rect2.left &&
+                    rect1.top < rect2.bottom &&
+                    rect1.bottom > rect2.top
+                );
+            }
+
+            // Handle arrow key presses to move the avatar
+            document.addEventListener("keydown", function(event) {
+                if (event.key === "ArrowLeft") {
+                    moveAvatar("left");
+                } else if (event.key === "ArrowRight") {
+                    moveAvatar("right");
+                } else if (event.key === "ArrowUp") {
+                    moveAvatar("up");
+                } else if (event.key === "ArrowDown") {
+                    moveAvatar("down");
+                }
+            });
+
+            // Create initial gems
+            for (let i = 0; i < 5; i++) {
+                createGem();
+            }
+
+            // Create new gem every second
+            setInterval(function() {
+                createGem();
+            }, 1000);
+        });
+    </script>
+    <div id="avatar"></div>
+
 </body>
 </html>
