--- a/gem_gobbler.html
+++ b/gem_gobbler.html
@@ -863,7 +863,8 @@ alert(sum)
             }, 1000);
         });
     </script>
-    <div id="avatar"></div>
+    //<div id="avatar"></div>
+	<img id="avatar" src=barterNFT_logo_1155.png></img>
 
 </body>
 </html>
