--- a/gem_gobblerv2.html
+++ b/gem_gobblerv2.html
@@ -512,7 +512,7 @@ const image_ = $.ajax({
 
 
 
-function getImage(xhttp){
+<!-- function getImage(xhttp){
 			var result = xhttp.response;
 			JSONresult = JSON.parse(result);
 			console.log(JSONresult.image);
@@ -532,10 +532,10 @@ function getImage(xhttp){
 	//document.getElementById("rs" + i).loading = "lazy";
 	//document.getElementById("rs" + i).src = JSONresult.image;
 	
-	}
+	} -->
 
 
-function image_and_name(uri, getImage){
+<!-- function image_and_name(uri, getImage){
 
 
   var val = (async function(){
@@ -554,7 +554,7 @@ function image_and_name(uri, getImage){
 
 })()
 //return val
-	}
+	} -->
 
 
 
@@ -565,8 +565,8 @@ function image_and_name(uri, getImage){
     <style>
         /* Styling for game elements */
         #game-board {
-            width: 400px;
-            height: 400px;
+            width: 800px;
+            height: 800px;
             border: 1px solid black;
             position: relative;
         }
@@ -582,8 +582,8 @@ function image_and_name(uri, getImage){
 
 
         #avatar {
-            width: 5px;
-            height: 5px;
+            width: 35px;
+            height: 35px;
             background-color: blue;
             position: absolute;
             top: 0;
