--- a/gem_gobblerv2.html
+++ b/gem_gobblerv2.html
@@ -469,7 +469,7 @@ var display = (async function(){
 
 var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
-		alert(account);
+		//alert(account);
 const Owner_ = await contract_bal.methods.tokenOfOwnerByIndex(account, 0).call(function (err, res) {
     if (err) {
       console.log("An error occured", err)
@@ -478,10 +478,10 @@ const Owner_ = await contract_bal.methods.tokenOfOwnerByIndex(account, 0).call(f
     console.log(`The balance is: ${res}`)
   })
 
-alert(Owner_);
+//alert(Owner_);
 
 var URI = await contract_bal.methods.tokenURI(Owner_).call();
-alert(URI);
+//alert(URI);
 
 var proxy = 'https://cors-anywhere.herokuapp.com/';
 
@@ -503,7 +503,7 @@ const image_ = $.ajax({
   success: function(data, status, xhr) {
    
     var JSONresult = JSON.parse(xhr.responseText);
-    alert(JSONresult.image);
+    //alert(JSONresult.image);
     document.getElementById("avatar").src = JSONresult.image;
     //return JSONresult.image
   }
