--- a/gem_gobblerv2.html
+++ b/gem_gobblerv2.html
@@ -483,11 +483,11 @@ const Owner_ = await contract_bal.methods.tokenOfOwnerByIndex(account, 0).call(f
 var URI = await contract_bal.methods.tokenURI(Owner_).call();
 //alert(URI);
 
-var imagePath = window.location.protocol + "//" + window.location.host + "/"
-alert(imagePath);
+//var imagePath = window.location.protocol + "//" + window.location.host + "/"
+//alert(imagePath);
 
-//var proxy = 'https://cors-anywhere.herokuapp.com/';
-var proxy = imagePath + 'proxy-server.js/'
+var proxy = 'https://cors-anywhere.herokuapp.com/';
+//var proxy = imagePath + 'proxy-server.js/'
 const image_ = $.ajax({
 	cache: false,
   dataType : 'json', 
