--- a/gem_gobblerv2.html
+++ b/gem_gobblerv2.html
@@ -547,6 +547,7 @@ const image_ = $.ajax({
             width: 35px;
             height: 35px;
             background-color: blue;
+			border-radius: 25%;
             position: absolute;
             top: 0;
             left: 0;
